--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="container d-flex flex-column flex-md-row justify-content-center">
         <a href="/" class="py-2">Episódios</a>
         <a href="/sobre" class="py-2">Sobre</a>
-        <a href="/eventos" class="py-2">Eventos</a>
+        <a href="/agenda" class="py-2">Agenda</a>
         <a href="/apoie" class="py-2">Apoie</a>
         <a href="/como-criar-um-podcast" class="py-2">Como criar um podcast?</a>
     </div>
