--- a/themes/quebradev/layout/_partial/initial.ejs
+++ b/themes/quebradev/layout/_partial/initial.ejs
@@ -1,3 +1,4 @@
 <section class="text-center description">
     <h1>Um coletivo que tem como objetivo democratizar a informação para a periferia.</h1>
+    <p>Nossas lives acontecem a cada duas semanas às segundas-feiras 20h na <a href="https://www.twitch.tv/quebradev" target="_blank" rel="noreferrer" class="underline">twitch.tv</a> 🎥</p>
 </section>
