--- a/themes/quebradev/layout/_partial/footer.ejs
+++ b/themes/quebradev/layout/_partial/footer.ejs
@@ -2,7 +2,7 @@
     <% if (Object.keys(theme.support_links).length !== 0) { %>
 	<section class="container text-center">
 	    <section class="footer-support">
-		<h4>Patrocinadores</h4>
+		<h4>Apoiadores</h4>
 		<% for (var key in theme.support_links) { %>
 		    <a href="<%= theme.support_links[key].link %>" target="_blank" title="<%= key %>">
 			<img src="/images/<%= key %>.png" alt="<%= key %>" height="<%= theme.support_links[key].height %>">
