--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -11,7 +11,20 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Descrição</h3>
-            <p>....</p>
+            <p>
+                A CTS tem como objetivo discutir os impactos da tecnologia na sociedade.
+                <br>
+                Existem diferentes eventos que buscam disseminar informações restritas à técnica, aqui o objetivo é conversar sobre como a tecnologia impacta em nossas vidas.
+                <br>
+                Buscaremos pessoas que formulam hipóteses e trabalham com pesquisa de problemáticas, além de possíveis soluções para que possamos construir o nosso bem viver.
+                <br>
+                Como questionamento central para esta primeira edição (que é uma edição piloto) nós gostaríamos de trazer a reflexão: <b>Tecnologia Para Quem?</b>
+            </p>
+            <p>
+                <b>Data:</b> 28 de outubro de 2023 <br>
+                </b>Dia:</b> Sábado <br>
+                </b>Horário:</b> Das 13hrs às 19hrs <br>
+            </p>
         </div>
     </div>
 
@@ -32,7 +45,14 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Apoiadores</h3>
-            <p>....</p>
+
+            <section class="container text-center">
+                <section class="footer-support">
+                    <a href="https://www.sindpd.org.br/" target="_blank" title="Logo SindPD SP">
+                        <img src="https://sindpd.org.br/sindpd/site/images/logoTopo.png?versao=3" alt="Logo SindPD SP" height="60">
+                    </a>
+                </section>
+            </section>
         </div>
     </div>
 
