--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -9,7 +9,7 @@
     </div>
 
     <div class="row">
-        <div class="col-12 social text-center">
+        <div class="col-12 social text-left">
             <h3>Descrição</h3>
             <p>
                 A CTS tem como objetivo discutir os impactos da tecnologia na sociedade.
@@ -22,16 +22,41 @@
             </p>
             <p>
                 <b>Data:</b> 28 de outubro de 2023 <br>
-                </b>Dia:</b> Sábado <br>
-                </b>Horário:</b> Das 13hrs às 19hrs <br>
+                <b>Dia:</b> Sábado <br>
+                <b>Horário:</b> Das 13hrs às 19hrs <br>
             </p>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12 social text-center">
-            <h3>Programação</h3>
-            <p>....</p>
+            <div class="col-12">
+                <h1 class="bordered-left">Programação</h1>
+                <div class="text-center">
+                    <p>Programação da Conferência</p>
+                </div>
+            </div>
+
+            <div class="event col-6">
+                <h3>Credenciamento</h3>
+                <p><strong>Horário:</strong> 13hrs</p>
+                <p><strong>Conteúdo:</strong> Abertura do Credenciamento e Coffe Break</p>
+            </div>
+            <div class="event col-6">
+                <h3>Abertura da Conferência</h3>
+                <p><strong>Horário:</strong> 14hrs</p>
+                <p><strong>Conteúdo:</strong> Abertura da Conferência com Falas Inicias do QuebraDev e do Sindicato</p>
+            </div>
+            <div class="event col-6">
+                <h3>Palestra Um</h3>
+                <p><strong>Horário:</strong> 14:20 às 15:00</p>
+                <p><strong>Conteúdo:</strong> ...</p>
+            </div>
+            <div class="event col-6">
+                <h3>Mesa Dois</h3>
+                <p><strong>Horário:</strong> 14:20 às 15:00</p>
+                <p><strong>Conteúdo:</strong> ...</p>
+            </div>
         </div>
     </div>
 
@@ -49,7 +74,7 @@
             <section class="container text-center">
                 <section class="footer-support">
                     <a href="https://www.sindpd.org.br/" target="_blank" title="Logo SindPD SP">
-                        <img src="https://sindpd.org.br/sindpd/site/images/logoTopo.png?versao=3" alt="Logo SindPD SP" height="60">
+                        <img src="https://sindpd.org.br/sindpd/site/images/logoRodape.png" alt="Logo SindPD SP" height="60">
                     </a>
                 </section>
             </section>
@@ -59,7 +84,7 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Patrocinio</h3>
-            <p>....</p>
+            <p>Quer ser um patrocinador? Veja nosso <a href="https://docs.google.com/presentation/d/1ZoS8qmXBBe3Tuy4TFpyt5evp-ET_ESr5pg1GDKqZzt8/edit?usp=sharing" target="_blank">material</a> de patrocinio e entre em contato conosco.</p>
         </div>
     </div>
 
