--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -28,35 +28,33 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 social text-center">
-            <div class="col-12">
-                <h1 class="bordered-left">Programação</h1>
-                <div class="text-center">
-                    <p>Programação da Conferência</p>
-                </div>
+    <div class="events-wrapper row">
+        <div class="col-12">
+            <h1 class="bordered-left">Programação</h1>
+            <div class="text-center">
+                <p>Programação da Conferência</p>
             </div>
+        </div>
 
-            <div class="event col-6">
-                <h3>Credenciamento</h3>
-                <p><strong>Horário:</strong> 13hrs</p>
-                <p><strong>Conteúdo:</strong> Abertura do Credenciamento e Coffe Break</p>
-            </div>
-            <div class="event col-6">
-                <h3>Abertura da Conferência</h3>
-                <p><strong>Horário:</strong> 14hrs</p>
-                <p><strong>Conteúdo:</strong> Abertura da Conferência com Falas Inicias do QuebraDev e do Sindicato</p>
-            </div>
-            <div class="event col-6">
-                <h3>Palestra Um</h3>
-                <p><strong>Horário:</strong> 14:20 às 15:00</p>
-                <p><strong>Conteúdo:</strong> ...</p>
-            </div>
-            <div class="event col-6">
-                <h3>Mesa Dois</h3>
-                <p><strong>Horário:</strong> 14:20 às 15:00</p>
-                <p><strong>Conteúdo:</strong> ...</p>
-            </div>
+        <div class="event col-6">
+            <h3>Credenciamento</h3>
+            <p><strong>Horário:</strong> 13hrs</p>
+            <p><strong>Conteúdo:</strong> Abertura do Credenciamento e Coffe Break</p>
+        </div>
+        <div class="event col-6">
+            <h3>Abertura da Conferência</h3>
+            <p><strong>Horário:</strong> 14hrs</p>
+            <p><strong>Conteúdo:</strong> Abertura da Conferência com Falas Inicias do QuebraDev e do Sindicato</p>
+        </div>
+        <div class="event col-6">
+            <h3>Palestra Um</h3>
+            <p><strong>Horário:</strong> 14:20 às 15:00</p>
+            <p><strong>Conteúdo:</strong> ...</p>
+        </div>
+        <div class="event col-6">
+            <h3>Mesa Dois</h3>
+            <p><strong>Horário:</strong> 14:20 às 15:00</p>
+            <p><strong>Conteúdo:</strong> ...</p>
         </div>
     </div>
 
