--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -87,6 +87,6 @@
     </div>
 
     <div class="text-center contact-email">
-        <p>Entre em contato com a gente através do email <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a></p>
+        <p><a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a>
     </div>
 </div>
