--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -67,7 +67,7 @@
 
     <div class="row">
         <div class="col-12 social text-center">
-            <h3>Apoiadores</h3>
+            <h3>Parceiros desta conferência</h3>
 
             <section class="container text-center">
                 <section class="footer-support">
