updates page conf

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -47,38 +47,10 @@
             <p><strong>Conteúdo:</strong> Abertura da Conferência com Falas Inicias do QuebraDev e do Sindicato</p>
         </div>
         <div class="event col-6">
-            <h3>Educação digital popular</h3>
-            <p><strong>Horário:</strong> 14:20 às 15:00</p>
-            <p><strong>Conteúdo:</strong> Educação digital é a prática de utilizar meios tecnológicos em métodos de ensino, frequentemente aliada à adoção de processos mais dinâmicos de aprendizagem.</p>
-            <p><strong>Por:</strong> A confirmar convidado</p>
-        </div>
-        <div class="event col-6">
-            <h3>Redes comunitárias</h3>
-            <p><strong>Horário:</strong> 15:05 às 15:45</p>
-            <p><strong>Conteúdo:</strong> Uma rede comunitária é uma rede de dados que provê conexão entre os dispositivos de acesso (computador, celular, tablet, etc.) dos usuários locais e uma forma de conectividade que busca suprir de forma independente e com baixo custo a falta de interesse comercial ou de infraestrutura de qualidade em certas regiões, geralmente de periferias urbanas ou áreas rurais.</p>
-            <p><strong>Por:</strong> A confirmar convidado</p>
-        </div>
-        <div class="event col-6">
-            <h3>Pausa para o café</h3>
-            <p><strong>Horário:</strong> 15:50 às 16:30</p>
-            <p><strong>Conteúdo:</strong> Coffe break para da aquela refletida no conteúdo.</p>
-        </div>
-        <div class="event col-6">
-            <h3>Colonialismo Digital</h3>
-            <p><strong>Horário:</strong> 16:30 às 17:20</p>
-            <p><strong>Conteúdo:</strong> Mesa de debate sobre colonialismo digital.</p>
+            <h3>Mesas, palestras e conteúdo</h3>
+            <p><strong>Horário:</strong> 14:20 às 19:00</p>
+            <p><strong>Conteúdo:</strong> Maiores detalhes dos participantes e convidados em breve, se inscreva para não perder nenhuma atualização.</p>
             <p><strong>Por:</strong> A confirmar convidados</p>
-        </div>
-        <div class="event col-6">
-            <h3>Organização, educação e soberania digital</h3>
-            <p><strong>Horário:</strong> 17:25 às 18:35</p>
-            <p><strong>Conteúdo:</strong> Como se organizar politicamente para termos soberania digital.</p>
-            <p><strong>Por:</strong> Gabriel Simeone (Nucleo de Tecnologia do MTST), Hosts: Kaio e Willian</p>
-        </div>
-        <div class="event col-6">
-            <h3>Finalização do evento</h3>
-            <p><strong>Horário:</strong> 18:40 às 19:00</p>
-            <p><strong>Conteúdo:</strong> Ultimas palavras dos organizadores.</p>
         </div>
     </div>
 
