updates page conf

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -11,15 +11,17 @@
     <div class="row">
         <div class="col-12 social text-left">
             <h3>Descrição</h3>
-            <p>
-                A CTS tem como objetivo discutir os impactos da tecnologia na sociedade.
-                <br>
-                Existem diferentes eventos que buscam disseminar informações restritas à técnica, aqui o objetivo é conversar sobre como a tecnologia impacta em nossas vidas.
-                <br>
-                Buscaremos pessoas que formulam hipóteses e trabalham com pesquisa de problemáticas, além de possíveis soluções para que possamos construir o nosso bem viver.
-                <br>
-                Como questionamento central para esta primeira edição (que é uma edição piloto) nós gostaríamos de trazer a reflexão: <b>Tecnologia Para Quem?</b>
-            </p>
+            <p>A CTS tem como objetivo discutir alguns dos impactos da tecnologia na sociedade.</p>
+            <br>
+            <p>Existem diferentes eventos que buscam disseminar conhecimentos técnicos, aqui o objetivo é conversar sobre como a tecnologia impacta em nossas vidas.</p>
+            <br>
+            <p>Colocaremos em contato com o público participante, pessoas que formulam hipóteses e trabalham com pesquisa de problemáticas, além de possíveis soluções para que possamos construir futuramente, formas comunitárias de bem viver.</p>
+            <br>
+            <p>A tecnologia por diferentes momentos da história, se mostrou como uma poderosíssima ferramenta de descentralização de conhecimento e poder, com o capital manipulando-a e a colocando em seu favor, será isso, possível?</p>
+            <br>
+            <p>As ferramentas construídas por pessoas militantes, ativistas, trabalhadoras, pesquisadoras, etc, estão nas mãos de quem? Quem modifica as ferramentas que modificam a forma com que enxergamos o mundo?</p>
+            <br>
+            <p>Como questionamento central para esta primeira edição (que é uma edição piloto) nós gostaríamos de trazer a reflexão: <b>Tecnologia Para Quem?</b></p>
             <p>
                 <b>Data:</b> 28 de outubro de 2023 <br>
                 <b>Dia:</b> Sábado <br>
