--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -60,6 +60,25 @@
 
     <div class="row">
         <div class="col-12 social text-center">
+            <h3>Apoie esta Conferência</h3>
+            <p>Para mantemos todos os ingressos grátis e pagar os custos necessários para produção de um evento precisamos da sua ajuda. Qualquer valor é bem vindo!</p>
+        </div>
+
+        <div class="col-6 padrim-image text-center">
+            <p>Clicando na imagem abaixo você irá acessar a nossa página no Padrim:</p>
+            <a href="https://padrim.com.br/quebradev" target="_blank" title="Padrim QuebraDev - Apoie">
+                <img src="/images/quebradev-padrim.png" alt="Padrim QuebraDev - Apoie">
+            </a>
+        </div>
+
+        <div class="col-6 padrim-image text-center">
+            <p>Ou leia o QR Code com o aplicativo do seu banco e doe qualquer valor:</p>
+            <img src="/images/qrcode-pix.jpeg" alt="QR Code QuebraDev - Apoie">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 social text-center">
             <h3>Parceiros desta conferência</h3>
 
             <section class="container text-center">
