--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -65,15 +65,15 @@
         </div>
 
         <div class="col-6 padrim-image text-center">
-            <p>Clicando na imagem abaixo você irá acessar a nossa página no Padrim:</p>
+            <p>Clicando na imagem abaixo você irá acessar a nossa página no Padrim</p>
             <a href="https://padrim.com.br/quebradev" target="_blank" title="Padrim QuebraDev - Apoie">
                 <img src="/images/quebradev-padrim.png" alt="Padrim QuebraDev - Apoie">
             </a>
         </div>
 
         <div class="col-6 padrim-image text-center">
-            <p>Ou leia o QR Code com o aplicativo do seu banco e doe qualquer valor:</p>
-            <img src="/images/qrcode-pix.jpeg" alt="QR Code QuebraDev - Apoie">
+            <p>Ou leia o QR Code com o aplicativo do seu banco e doe qualquer valor</p>
+            <img src="/images/qrcode-pix.jpeg" alt="QR Code QuebraDev - Apoie" width="240">
         </div>
     </div>
 
