--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -64,16 +64,11 @@
             <p>Para mantemos todos os ingressos grátis e pagar os custos necessários para produção de um evento precisamos da sua ajuda. Qualquer valor é bem vindo!</p>
         </div>
 
-        <div class="col-6 padrim-image text-center">
-            <p>Clicando na imagem abaixo você irá acessar a nossa página no Padrim</p>
+        <div class="col-12 padrim-image text-center">
+            <p>Clicando na imagem abaixo você irá acessar a nossa página no Padrim, ou você pode ler o QrCode direto com seu aplicativo do banco com o pix.</p>
             <a href="https://padrim.com.br/quebradev" target="_blank" title="Padrim QuebraDev - Apoie">
-                <img src="/images/quebradev-padrim.png" alt="Padrim QuebraDev - Apoie">
+                <img src="/images/QrCode.png" alt="Padrim QuebraDev - Apoie">
             </a>
-        </div>
-
-        <div class="col-6 padrim-image text-center">
-            <p>Ou leia o QR Code com o aplicativo do seu banco e doe qualquer valor</p>
-            <img src="/images/qrcode-pix.jpeg" alt="QR Code QuebraDev - Apoie" width="240">
         </div>
     </div>
 
