chore: add logo parceiro mtst

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -82,6 +82,11 @@
                         <img src="https://sindpd.org.br/sindpd/site/images/logoRodape.png" alt="Logo SindPD SP" height="60">
                     </a>
                 </section>
+                <section class="footer-support">
+                    <a href="https://nucleodetecnologia.com.br/" target="_blank" title="Logo Nucleo de Tecnologia MTST">
+                        <img src="/images/nucleo-mtst.png" alt="Logo Nucleo de Tecnologia MTST" height="60">
+                    </a>
+                </section>
             </section>
         </div>
     </div>
