chore: add logo programacao dinamica parceiro

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -76,15 +76,20 @@
         <div class="col-12 social text-center">
             <h3>Parceiros desta conferência</h3>
 
-            <section class="container text-center">
-                <section class="footer-support">
+            <section class="row">
+                <section class="col-4">
                     <a href="https://www.sindpd.org.br/" target="_blank" title="Logo SindPD SP">
                         <img src="https://sindpd.org.br/sindpd/site/images/logoRodape.png" alt="Logo SindPD SP" height="60">
                     </a>
                 </section>
-                <section class="footer-support">
+                <section class="col-4">
                     <a href="https://nucleodetecnologia.com.br/" target="_blank" title="Logo Nucleo de Tecnologia MTST">
                         <img src="/images/nucleo-mtst.png" alt="Logo Nucleo de Tecnologia MTST" height="60">
+                    </a>
+                </section>
+                <section class="col-4">
+                    <a href="https://www.youtube.com/programacaodinamica" target="_blank" title="Logo Programação Dinamica">
+                        <img src="/images/programacao-dinamica.jpeg" alt="Logo Programação Dinamica" height="60">
                     </a>
                 </section>
             </section>
