--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -77,17 +77,22 @@
             <h3>Parceiros desta conferência</h3>
 
             <section class="row">
-                <section class="col-4">
+                <section class="col-3">
                     <a href="https://www.sindpd.org.br/" target="_blank" title="Logo SindPD SP">
-                        <img src="https://sindpd.org.br/sindpd/site/images/logoRodape.png" alt="Logo SindPD SP" height="60">
+                        <img src="/images/novo_sindpd_branco.png" alt="Logo SindPD SP" height="60">
                     </a>
                 </section>
-                <section class="col-4">
+                <section class="col-3">
+                    <a href="http://feittinf.org.br/" target="_blank" title="Logo Feittinf">
+                        <img src="/images/logo_branco_feittinf.png" alt="Logo Feittinf" height="60">
+                    </a>
+                </section>
+                <section class="col-3">
                     <a href="https://nucleodetecnologia.com.br/" target="_blank" title="Logo Nucleo de Tecnologia MTST">
                         <img src="/images/nucleo-mtst.png" alt="Logo Nucleo de Tecnologia MTST" height="60">
                     </a>
                 </section>
-                <section class="col-4">
+                <section class="col-3">
                     <a href="https://www.youtube.com/programacaodinamica" target="_blank" title="Logo Programação Dinamica">
                         <img src="/images/programacao-dinamica.jpeg" alt="Logo Programação Dinamica" height="60">
                     </a>
