--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -97,6 +97,8 @@
                         <img src="/images/programacao-dinamica.jpeg" alt="Logo Programação Dinamica" height="60">
                     </a>
                 </section>
+            </section>
+            <section class="row">
                 <section class="col-3">
                     <a href="https://todasasletras.org/" target="_blank" title="Logo Todas as Letras">
                         <img src="/images/todas-as-letras.png" alt="Logo Todas as Letras" height="60">
