fix: update grid

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -98,7 +98,7 @@
                     </a>
                 </section>
             </section>
-            <section class="row">
+            <section class="row" style="margin-top: 50px;">
                 <section class="col-3">
                     <a href="https://todasasletras.org/" target="_blank" title="Logo Todas as Letras">
                         <img src="/images/todas-as-letras.png" alt="Logo Todas as Letras" height="60">
