feat: update page link sympla

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -54,7 +54,7 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Inscreva-se</h3>
-            <p>....</p>
+            <p>Se inscreva usando a plataforma Sympla, clicando <a href="https://www.sympla.com.br/evento/conferencia-tecnologia-e-sociedade-tecnologia-para-quem/2129140" target="_blank"><u>aqui</u></a></p>
         </div>
     </div>
 
