chore: add logo linuxtips

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -104,6 +104,11 @@
                         <img src="/images/todas-as-letras.png" alt="Logo Todas as Letras" height="60">
                     </a>
                 </section>
+                <section class="col-3">
+                    <a href="https://www.linuxtips.io/" target="_blank" title="Logo Linux Tips">
+                        <img src="/images/linuxtips.png" alt="Logo Linux Tips" height="60">
+                    </a>
+                </section>
             </section>
         </div>
     </div>
