--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -61,7 +61,7 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Apoie esta Conferência</h3>
-            <p>Para mantemos todos os ingressos grátis e pagar os custos necessários para produção de um evento precisamos da sua ajuda. Qualquer valor é bem vindo!</p>
+            <p>Para mantermos todos os ingressos grátis e pagar os custos necessários para produção de um evento precisamos da sua ajuda. Qualquer valor é bem vindo!</p>
             <p>Clicando na imagem abaixo você irá acessar a nossa página no Padrim, ou você pode ler o QrCode direto com seu aplicativo do banco com o pix.</p>
         </div>
 
