chore: novos parceiros e fix grid

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -77,36 +77,53 @@
             <h3>Parceiros desta conferência</h3>
 
             <section class="row">
-                <section class="col-3">
+                <section class="col">
                     <a href="https://www.sindpd.org.br/" target="_blank" title="Logo SindPD SP">
                         <img src="/images/novo_sindpd_branco.png" alt="Logo SindPD SP" height="60">
                     </a>
                 </section>
-                <section class="col-3">
+                <section class="col">
                     <a href="http://feittinf.org.br/" target="_blank" title="Logo Feittinf">
                         <img src="/images/logo_branco_feittinf.png" alt="Logo Feittinf" height="60">
                     </a>
                 </section>
-                <section class="col-3">
+                <section class="col">
                     <a href="https://nucleodetecnologia.com.br/" target="_blank" title="Logo Nucleo de Tecnologia MTST">
                         <img src="/images/nucleo-mtst.png" alt="Logo Nucleo de Tecnologia MTST" height="60">
                     </a>
                 </section>
-                <section class="col-3">
+                <section class="col">
                     <a href="https://www.youtube.com/programacaodinamica" target="_blank" title="Logo Programação Dinamica">
                         <img src="/images/programacao-dinamica.jpeg" alt="Logo Programação Dinamica" height="60">
                     </a>
                 </section>
             </section>
             <section class="row" style="margin-top: 50px;">
-                <section class="col-3">
+                <section class="col">
                     <a href="https://todasasletras.org/" target="_blank" title="Logo Todas as Letras">
                         <img src="/images/todas-as-letras.png" alt="Logo Todas as Letras" height="60">
                     </a>
                 </section>
-                <section class="col-3">
+                <section class="col">
                     <a href="https://www.linuxtips.io/" target="_blank" title="Logo Linux Tips">
                         <img src="/images/linuxtips.png" alt="Logo Linux Tips" height="60">
+                    </a>
+                </section>
+                <section class="col">
+                    <a href="https://comunidade.afroya.tech/quemsomos" target="_blank" title="Logo Afroya Tech Conf">
+                        <img src="/images/afroya.jpeg" alt="Logo Afroya Tech Conf" height="60">
+                    </a>
+                </section>
+                <section class="col">
+                    <a href="https://frontinsampa.com.br/" target="_blank" title="Logo Front In">
+                        <img src="/images/logo-frontin-full.svg" alt="Logo Front In" height="60">
+                    </a>
+                </section>
+            </section>
+            <section class="row" style="margin-top: 50px;">            
+                <section class="col">
+                    <a href="https://perifacode.com/" target="_blank" title="Logo Perifa Code">
+                        <img src="/images/perifacode.jpeg" alt="Logo Perifa Code" height="60">
                     </a>
                 </section>
             </section>
