fix: local e title da pagina

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -22,6 +22,9 @@
                 <b>Dia:</b> Sábado <br>
                 <b>Horário:</b> Das 13hrs às 19hrs <br>
             </p>
+            <p>
+                <strong>Onde:</strong> <a href="https://maps.google.com/?q=Av. Angélica, 35 - Santa Cecilia, São Paulo - SP, 01227-000" target="_blank" title="Localização do evento no Google Maps.">Av. Angélica, 35 - Santa Cecilia, São Paulo - SP, 01227-000</a>
+            </p>
         </div>
     </div>
 
