--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -70,9 +70,9 @@
             <p><strong>Por:</strong> A confirmar mesa</p>
         </div>
         <div class="event col-6">
-            <h3>Núcleo de Tecnologia do MTST</h3>
+            <h3>A confirmar</h3>
             <p><strong>Horário:</strong> 17:25 às 18:35</p>
-            <p><strong>Conteúdo:</strong> O que é o Núcleo MTST, a formação politica e técnica, voluntários e a soberania digital.</p>
+            <p><strong>Conteúdo:</strong> Como organizar uma formação politica e técnica, com voluntários com ênfase em soberania digital.</p>
             <p><strong>Por:</strong> A confirmar</p>
         </div>
         <div class="event col-6">
