--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -50,13 +50,13 @@
             <h3>Educação digital Popular</h3>
             <p><strong>Horário:</strong> 14:20 às 15:00</p>
             <p><strong>Conteúdo:</strong> O que é a educação digital popular, como podemos aplicar no dia a dia para mudar o contexto social atual do uso da tecnologia?</p>
-            <p><strong>Por:</strong> A confirmar</p>
+            <p><strong>Por:</strong> Em breve</p>
         </div>
         <div class="event col-6">
             <h3>Redes Comunitárias</h3>
             <p><strong>Horário:</strong> 15:05 às 15:45</p>
             <p><strong>Conteúdo:</strong> O que são as redes comunitárias e qual papel delas para a internet brasileira?</p>
-            <p><strong>Por:</strong> A confirmar</p>
+            <p><strong>Por:</strong> Em breve</p>
         </div>
         <div class="event col-6">
             <h3>Pausa para o café</h3>
@@ -67,13 +67,13 @@
             <h3>Colonialismo Digital e Colonialismo de Dados</h3>
             <p><strong>Horário:</strong> 16:10 às 17:20</p>
             <p><strong>Conteúdo:</strong> Bate papo sobre Colonialismo Digital, Colonialismo de Dados</p>
-            <p><strong>Por:</strong> A confirmar mesa</p>
+            <p><strong>Por:</strong> Em breve mesa</p>
         </div>
         <div class="event col-6">
-            <h3>A confirmar</h3>
+            <h3>Em breve</h3>
             <p><strong>Horário:</strong> 17:25 às 18:35</p>
             <p><strong>Conteúdo:</strong> Como organizar uma formação politica e técnica, com voluntários com ênfase em soberania digital.</p>
-            <p><strong>Por:</strong> A confirmar</p>
+            <p><strong>Por:</strong> Em breve</p>
         </div>
         <div class="event col-6">
             <h3>Finalização</h3>
