--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -4,7 +4,7 @@
         <a href="/sobre" class="py-2">Sobre</a>
         <a href="/agenda" class="py-2">Agenda</a>
         <a href="/apoie" class="py-2">Apoie</a>
-        <a href="/como-criar-um-podcast" class="py-2">Como criar um podcast?</a>
+        <a href="/conferencia-tecnologia-e-sociedade" class="py-2">Conferência</a>
     </div>
 </nav>
 
