--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -66,7 +66,7 @@
         <div class="event col-6">
             <h3>Colonialismo Digital e Colonialismo de Dados</h3>
             <p><strong>Horário:</strong> 16:10 às 17:20</p>
-            <p><strong>Conteúdo:</strong> Bate papo sobre Colonialismo Digital, Colonialismo de Dados</p>
+            <p><strong>Conteúdo:</strong> Debate acerta de algumas ferramentas do colonialismo na contemporaneidade. Como a construção do modelo de mercado digital de hoje impacta e pode impactar nossas vidas? Como podemos nos desvencilhar?</p>
             <p><strong>Por:</strong> Em breve mesa</p>
         </div>
         <div class="event col-6">
