Feat conf page (#148)
* feat: conf page

* update page

* chore: updates

* chore: updates

* chore: updates

* chore: updates

* updates page conf

* updates page conf

* updates page conf

* updates page conf

* chore: doações

* chore: doações

* chore: doações

* chore: doações

* chore: add logo parceiro mtst

* chore: add logo programacao dinamica parceiro

* chore: add logo programacao dinamica parceiro

* chore: add parceiros

* chore: logo todas as letras

* chore: logo todas as letras

* chore: move logos

* fix: update grid

* fix: update grid

* feat: update page link sympla

* chore: add logo linuxtips

* Update themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs

Co-authored-by: Gustavo Castilião <gucastiliao@gmail.com>

* chore: novos parceiros e fix grid

* fix: local e title da pagina

* updates horarios e convidados

* chore: updates

* chore: updates

* chore: updates

* chore: updates

* chore: updates

---------

Co-authored-by: Reginaldo Junior <reginaldo.junior@creditas.com.br>
Co-authored-by: Gustavo Castilião <gucastiliao@gmail.com>

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -47,10 +47,37 @@
             <p><strong>Conteúdo:</strong> Abertura da Conferência com Falas Inicias do QuebraDev e do Sindicato</p>
         </div>
         <div class="event col-6">
-            <h3>Mesas, palestras e conteúdo</h3>
-            <p><strong>Horário:</strong> 14:20 às 19:00</p>
-            <p><strong>Conteúdo:</strong> Maiores detalhes dos participantes e convidados em breve, se inscreva para não perder nenhuma atualização.</p>
-            <p><strong>Por:</strong> A confirmar convidados</p>
+            <h3>Educação digital Popular</h3>
+            <p><strong>Horário:</strong> 14:20 às 15:00</p>
+            <p><strong>Conteúdo:</strong> O que é a educação digital popular, como podemos aplicar no dia a dia para mudar o contexto social atual do uso da tecnologia?</p>
+            <p><strong>Por:</strong> Em breve</p>
+        </div>
+        <div class="event col-6">
+            <h3>Redes Comunitárias</h3>
+            <p><strong>Horário:</strong> 15:05 às 15:45</p>
+            <p><strong>Conteúdo:</strong> O que são as redes comunitárias e qual papel delas para a internet brasileira?</p>
+            <p><strong>Por:</strong> Em breve</p>
+        </div>
+        <div class="event col-6">
+            <h3>Pausa para o café</h3>
+            <p><strong>Horário:</strong> 15:45 às 16:10</p>
+            <p><strong>Conteúdo:</strong> Pausa para o café e troca de ideias.</p>
+        </div>
+        <div class="event col-6">
+            <h3>Colonialismo Digital e Colonialismo de Dados</h3>
+            <p><strong>Horário:</strong> 16:10 às 17:20</p>
+            <p><strong>Conteúdo:</strong> Debate acerta de algumas ferramentas do colonialismo na contemporaneidade. Como a construção do modelo de mercado digital de hoje impacta e pode impactar nossas vidas? Como podemos nos desvencilhar?</p>
+            <p><strong>Por:</strong> Em breve</p>
+        </div>
+        <div class="event col-6">
+            <h3>Em breve</h3>
+            <p><strong>Horário:</strong> 17:25 às 18:35</p>
+            <p><strong>Conteúdo:</strong> Como organizar uma formação politica e técnica, com voluntários com ênfase em soberania digital popular.</p>
+            <p><strong>Por:</strong> Em breve</p>
+        </div>
+        <div class="event col-6">
+            <h3>Finalização</h3>
+            <p><strong>Horário:</strong> 18:40 às 19:00</p>
         </div>
     </div>
 
